* Bug #35654: don't overlap the context menu icon in gallery panes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54385 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
+++ b/management/univention-management-console-frontend-theme/dijit-claro-stylus/site/gallerypane.styl
@@ -56,22 +56,25 @@
 		//padding: 15px 20px;
 		//margin: 0 12px 10px 0;
 		height: 100px;
+		overflow: hidden;
 
 		.umcGalleryName {
 			font-size: $font-size-medium;
 			color: $text-color-lighter;
 			font-weight: bold;
-			border-bottom: solid 1px $gallery-border-color;
 			line-height: 1.05em;
-			height: 55%;
+			min-height: 55%;
 			transition-duration: inherit;
 			transition-property: color, border;
+			word-break: break-word;
+			margin-right: 20px;
 		}
 
 		.umcGalleryDescription {
 			color: $text-color-lightest;
 			line-height: 1.05em;
-			margin-top: 5px;
+			padding-top: 5px;
+			border-top: solid 1px $gallery-border-color;
 			transition-duration: inherit;
 			transition-property: color;
 		}
